# Quant

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  ROADMAP.md
scripts/: run_server.sh  run_simulation.sh  run_tests.sh
src/trading_app/: __init__.py  alpaca.py  auth.py  backtest.py  cli.py  config.py  data.py  improver.py  main.py  monte_carlo.py  risk.py  scheduler.py  schemas.py  storage.py  strategy.py  watchlist.py
src/trading_app/static/: index.html
tests/: asgi_client.py  test_alpaca.py  test_api.py  test_auth.py  test_backtest.py  test_config.py  test_monte_carlo.py  test_risk.py  test_strategy.py  test_trading_operations.py
