[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "paper-quant"
version = "0.1.0"
description = "Paper-first automated stock trading research scaffold with FastAPI, Alpaca boundaries, risk controls, and Monte Carlo simulation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "httpx>=0.27",
  "numpy>=1.24",
  "pydantic-settings>=2.0",
  "uvicorn[standard]>=0.30"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]

[project.scripts]
paper-quant = "trading_app.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
trading_app = ["static/*.html"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]
